<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <LinearLayout
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:padding="20dp">

        <EditText
            android:id="@+id/first"
            android:layout_width="80dp"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="+"
            android:textSize="50dp"/>
        <EditText
            android:id="@+id/second"
            android:layout_width="80dp"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="="
            android:textSize="50dp"/>
        <EditText
            android:id="@+id/result_main"
            android:layout_width="80dp"
            android:layout_height="match_parent"/>

    </LinearLayout>
    <Button
        android:layout_marginBottom="20dp"
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="计算"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>